<resources>
    <string name="click_see_data">Click to view data trends</string>
    <string name="waring_title">Warning</string>
    <string name="yeyu_waring_title">Amateur athletes: like sports but who seldom exercise a week is less than or equal to five days of professional exercise five days</string>
    <string name="putong_waring_title">Ordinary people: people who generally do not like sports a week less than or equal to two days of exercise</string>
    <string name="zhuanye_waring_title">Professional athletes: in professional sports people who exercise, seven days a week during almost all professional people who exercise</string>
    <string name="list_see_data">Click into the list shows</string>
    <string name="share_see_data">Click button share to twitter/email/SMS</string>
    <string name="feed_back">Feedback</string>
    <string name="email_subject">Customer feedback</string>
    <string name="email_type">Please Select</string>
    <string name="kitchen_list_see_data">Tap and enter into List Page</string>
    <string name="keep_on_scale_waring">Open the Bluetooth mobile phone after the scales barefoot, soles of the feet and keep moist.</string>
    <string name="contact_us">Customer Service</string>
    <string name="back_name">Back</string>
    <string name="back_name_mark">&lt; Back</string>
    <string name="app_name">iWellness</string>
    <string name="bmi_title">BMI</string>
    <string name="thin">Thin</string>
    <string name="Healthy">Healthy</string>
    <string name="Fat">Overweight</string>
    <string name="Overweight">Obese</string>
    <string name="Weightg_cloun">Weight(g)</string>
    <string name="Weightml_cloun">Weight(ml)</string>
    <string name="Weightml2_cloun">Weight(ml(milk))</string>
    <string name="Weightkg_cloun">Weight(kg)</string>
    <string name="Weightlboz_cloun">Weight(lb:oz)</string>
    <string name="Weightlb_cloun">Weight(lb)</string>
    <string name="Weightstlb_cloun">Weight(st:lb)</string>
    <string name="Weightfloz_cloun">Weight(fl.oz.)</string>
    <string name="bone_cloun">Bone(kg)</string>
    <string name="bodyfat_cloun">Body Fat(%)</string>
    <string name="muscle_cloun">Muscle Mass(kg)</string>
    <string name="bodywater_cloun">Body Water(%)</string>
    <string name="visceral_cloun">Visceral Fat</string>
    <string name="bmr_cloun">BMR(kcal)</string>
    <string name="bmi_cloun">BMI</string>
    <string name="phsicalage_cloun">Metabolic Age</string>
    <string name="bonekg_cloun">Bone(kg)</string>
    <string name="bonelb_cloun">Bone(lb)</string>
    <string name="bonestlb_cloun">Bone(st:lb)</string>
    <string name="musclekg_cloun">Muscle Mass(kg)</string>
    <string name="musclelb_cloun">Muscle Mass(lb)</string>
    <string name="musclestlb_cloun">Muscle Mass(st:lb)</string>
    <string name="Female_btn">Female</string>
    <string name="Male_btn">Male</string>
    <string name="Cancle_btn">Cancel</string>
    <string name="name_hint">Your Name(20 bit)</string>
    <string name="height_hint">1.6–10</string>
    <string name="height2_hint">1.6–10</string>
    <string name="uaerage_hint">5–120</string>
    <string name="uaermonth_hint">1–12</string>
    <string name="exit_waring">Are you sure you want to exit?</string>
    <string name="nodata_waring">No data for this user</string>
    <string name="deleted_waring">Are you sure you want to delete this measurement for this user?</string>
    <string name="delsucess_waring">Delete Sucess!</string>
    <string name="deleteall_waring">Are you sure you want to delete all measurement data for this user?</string>
    <string name="newdate_alter">New data received</string>
    <string name="saveorno_title">Do you want to save it?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="ok_btn">Ok</string>
    <string name="cancle_btn">Cancel</string>
    <string name="error_title">Err2</string>
    <string name="getdate_tutle">Getting new data</string>
    <string name="recvivedate_title">Data Received</string>
    <string name="photo_btn">Photo</string>
    <string name="sync_btn">Sync.</string>
    <string name="bmi1_title">BMI</string>
    <string name="name_title">Name</string>
    <string name="ordinary">Ordinary</string>
    <string name="amaeur">Amaeur</string>
    <string name="professional">Professional</string>
    <string name="bmr">BMR</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="name_error">Name length must be 1 and 16</string>
    <string name="height_error">Please enter the correct height.</string>
    <string name="age_error">Please enter the correct age.</string>
    <string name="age_error_2">Age Must Between 1 and 100</string>
    <string name="age_error_3">Age should not be less than 10</string>
    <string name="height_error_1">Height between 100 and 255cm</string>
    <string name="height_error_2">Height between 30 and 255cm</string>
    <string name="height_error_3">Height between 3ft:3in and 8ft:4in</string>
    <string name="height_error_4">Height between 1ft:0in and 8ft:4in</string>
    <string name="age_error1">select your birthday</string>
    <string name="inputname_waring">input your name</string>
    <string name="data_error">Data anomalies</string>
    <string name="mesuefat">Please keep standing on the scale, data collecting…</string>
    <string name="scaleerror">This connected device does not match with selected device!</string>
    <string name="mesuefat_try">Body Fat test error!</string>
    <string name="title_activity_get_fat_date_error">Body Fat test error!</string>
    <string name="mesuefat__error">Failed To Get Fat Data.</string>
    <string name="hour">Hour</string>
    <string name="day_date">Day</string>
    <string name="month_date">Month</string>
    <string name="yeat_date">Year</string>
    <string name="kg_danwei">kg</string>
    <string name="lb_danwei">lb</string>
    <string name="oz_danwei">st</string>
    <string name="stlb_danwei">st:lb</string>
    <string name="lboz_danwei">lb:oz</string>
    <string name="cm_danwei">cm</string>
    <string name="ftin_danwei">ft:in</string>
    <string name="info">Information</string>
    <string name="g_danwei">g</string>
    <string name="search">Search</string>
    <string name="ml_danwei">ml</string>
    <string name="oz_danwei2">fl.oz.</string>
    <string name="ml_danwei2">ml(milk)</string>
    <string name="date_title">Date</string>
    <string name="wight_gr_title">Weight</string>
    <string name="wight_kitchen_title">Weight</string>
    <string name="scale_detecting">Scale Detecting</string>
    <string name="detect_timeout_once_more">Scale detect timeout, detect once more!</string>
    <string name="detect_timeout">No scale found, please click BACK to return!</string>
    <string name="babyScacle_param_error">Height or age parameters do not conform to the requirements of the baby scale, please reset!</string>
    <string name="user_data_error">"Bluetooth fail to connection
Wrong setting for Height or Age 
Age: 10-100
Height: 100-255cm
Back"</string>
    <string name="scale_connection_success">Please keep on scale!</string>
    <string name="scale_keep_scale_work">Please make sure to turn on the scale，it is searching for devices!</string>
    <string name="scale_measurement_error">Fat measurements errors, please weigh again.</string>
    <string name="enable_bluetooth">please enable the bluetooth.</string>
    <string name="select_record">please select a record.</string>
    <string name="scale_paired_success">Devices paired, please operate your Bluetooth scale!</string>
    <string name="scale_connect_state_connected">Connection state：Connected</string>
    <string name="scale_connect_state_not_connected">Connection state：Not connected</string>
    <string name="export_name">Name:</string>
    <string name="export_time">Time:</string>
    <string name="export_weight">Weight:</string>
    <string name="export_body_Water">Body Water:</string>
    <string name="export_body_Fat">Body Fat:</string>
    <string name="export_bone">Bone:</string>
    <string name="export_BMI">BMI:</string>
    <string name="export_visceral_fat">Visceral Fat:</string>
    <string name="export_BMR">BMR:</string>
    <string name="export_muscle_mass">Muscle Mass:</string>
    <string name="setting_noSDCard">No SDCard!</string>
    <string name="setting_export_txt_succ">myrecords.txt save successfully,please check sdcard.</string>
    <string name="scale_type_bobyFat">Body Fat Scale</string>
    <string name="scale_type_bathroom">Bathroom Scale</string>
    <string name="scale_type_babyScale">Baby Scale</string>
    <string name="scale_type_kitchenScale">Nutrition Scale</string>
    <string name="kitchen_info_tip">100(modify)</string>
    <string name="kitchen_info_name_tip">input food name</string>
    <string name="NDB_No_excel_title">Name</string>
    <string name="Water_excel_title">Water</string>
    <string name="Energ_excel_title">Energy</string>
    <string name="Protein_excel_title">Protein</string>
    <string name="Lipid_excel_title">Lipid</string>
    <string name="Ash_excel_title">Ash</string>
    <string name="Carbohydrt_excel_title">Carbohydrt</string>
    <string name="Fiber_excel_title">Fiber</string>
    <string name="Sugar_excel_title">Sugar</string>
    <string name="Calcium_excel_title">Calcium</string>
    <string name="Iron_excel_title">Iron</string>
    <string name="Magnesium_excel_title">Magnesium</string>
    <string name="Phosphorus_excel_title">Phosphorus</string>
    <string name="Potassium_excel_title">Potassium</string>
    <string name="Sodium_excel_title">Sodium</string>
    <string name="Zinc_excel_title">Zinc</string>
    <string name="Copper_excel_title">Copper</string>
    <string name="Manganese_excel_title">Manganese</string>
    <string name="Selenium_excel_title">Selenium</string>
    <string name="Vit_C_excel_title">Vit_C</string>
    <string name="Thiamin_excel_title">Thiamin</string>
    <string name="Riboflavin_excel_title">Riboflavin</string>
    <string name="Niacin_excel_title">Niacin</string>
    <string name="Panto_Acid_excel_title">Panto_Acid</string>
    <string name="Vit_B6_excel_title">Vit_B6</string>
    <string name="Folate_Tot_excel_title">Folate_Tot</string>
    <string name="Folic_Acid_excel_title">Folic_Acid</string>
    <string name="Food_Folate_excel_title">Food_Folate</string>
    <string name="Folate_DFE_excel_title">Folate_DFE</string>
    <string name="Choline_Tot_excel_title">Choline_Tot</string>
    <string name="Vit_B12_excel_title">Vit_B12</string>
    <string name="Vit_A_IU_excel_title">Vit_A_IU</string>
    <string name="Vit_A_RAE_excel_title">Vit_A_RAE</string>
    <string name="Retinol_excel_title">Retinol</string>
    <string name="Alpha_Carot_excel_title">Alpha_Carot</string>
    <string name="Beta_Carot_excel_title">Beta_Carot</string>
    <string name="Beta_Crypt_excel_title">Beta_Crypt</string>
    <string name="Lycopene_excel_title">Lycopene</string>
    <string name="LutZea_excel_title">Lut+Zea</string>
    <string name="Vit_E_excel_title">Vit_E</string>
    <string name="Vit_D_excel_title">Vit_D</string>
    <string name="Vit_D_IU_excel_title">Vit_D_IU</string>
    <string name="Vit_K_excel_title">Vit_K</string>
    <string name="FA_Sat_excel_title">FA_Sat</string>
    <string name="FA_Mono_excel_title">FA_Mono</string>
    <string name="FA_Poly_excel_title">FA_Poly</string>
    <string name="Cholesterol_excel_title">Cholesterol</string>
    <string name="GmWt_1_excel_title">GmWt_1</string>
    <string name="GmWt_2_excel_title">GmWt_2</string>
    <string name="Refuse_Pct_excel_title">Refuse_Pct</string>
    <string name="food_detail_title">Detailed food ingredients:</string>
</resources>