<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff00a5d2" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_layout" android:background="#ff43c2ea" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <TextView android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/btn_mback" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/back_name" android:drawableLeft="@drawable/back_button" android:layout_centerVertical="true" android:onClick="onClickBack" />
        <Button android:id="@id/lefu_mbtn" android:background="@drawable/logo" android:visibility="gone" android:layout_width="60.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="openIntentate" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center_vertical" android:id="@id/search_layout" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <TextView android:gravity="center_vertical" android:id="@id/search_btn" android:background="@drawable/search_icon" android:clickable="true" android:layout_width="48.0dip" android:layout_height="30.0dip" android:layout_alignParentRight="true" />
        <com.lefu.es.view.kmpautotextview.KMPAutoComplTextView android:textSize="12.0sp" android:textColor="#ff222222" android:textColorHint="#ffaaaaaa" android:gravity="center_vertical" android:id="@id/search_et" android:background="@drawable/search_corners_blue_bg_normal2" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:hint="@string/kitchen_info_name_tip" android:ems="10" android:singleLine="true" android:drawableLeft="@drawable/search_bar_icon_normal" android:drawablePadding="8.0dip" android:completionThreshold="1" android:layout_toLeftOf="@id/search_btn" app:completionHighlightColor="@color/colorAccent" app:completionTextColor="#80000000" app:completionTextSize="14.0sp" app:completionIgnoreCase="true" />
        <AutoCompleteTextView android:textSize="14.0sp" android:textColor="#ff222222" android:textColorHint="#ffaaaaaa" android:gravity="center_vertical" android:id="@id/weight_et" android:background="@drawable/search_corners_blue_bg_normal2" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="10.0dip" android:hint="@string/kitchen_info_tip" android:ems="10" android:singleLine="true" android:drawablePadding="8.0dip" android:layout_below="@id/search_et" android:inputType="number" />
        <Spinner android:id="@id/spinner1" android:background="@drawable/search_corners_blue_bg_normal2" android:layout_width="200.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_toRightOf="@id/weight_et" android:layout_below="@id/search_et" />
        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/food_detail_title" android:layout_below="@id/weight_et" />
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/title_tv">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Water_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Energ_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Protein_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Lipid_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Ash_excel_title" style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Water_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Energ_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Protein_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Lipid_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Ash_excel_title" style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Carbohydrt_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Fiber_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Sugar_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Calcium_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Iron_excel_title" style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Carbohydrt_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Fiber_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Sugar_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Calcium_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Iron_excel_title" style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Magnesium_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Phosphorus_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Potassium_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Sodium_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Zinc_excel_title" style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Magnesium_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Phosphorus_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Potassium_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Sodium_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Zinc_excel_title" style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Copper_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Manganese_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Selenium_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Vit_C_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Thiamin_excel_title" style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Copper_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Manganese_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Selenium_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Vit_C_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Thiamin_excel_title" style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Riboflavin_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Niacin_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Panto_Acid_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Vit_B6_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Folate_Tot_excel_title" style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Riboflavin_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Niacin_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Panto_Acid_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Vit_B6_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Folate_Tot_excel_title" style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Folic_Acid_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Food_Folate_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Folate_DFE_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Choline_Tot_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Vit_B12_excel_title" style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Folic_Acid_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Food_Folate_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Folate_DFE_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Choline_Tot_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Vit_B12_excel_title" style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Vit_A_IU_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Vit_A_RAE_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Retinol_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Alpha_Carot_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Beta_Carot_excel_title" style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Vit_A_IU_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Vit_A_RAE_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Retinol_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Alpha_Carot_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Beta_Carot_excel_title" style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Beta_Crypt_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Lycopene_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/LutZea_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Vit_E_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Vit_D_excel_title" style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Beta_Crypt_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Lycopene_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/LutZea_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Vit_E_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Vit_D_excel_title" style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Vit_D_IU_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Vit_K_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/FA_Sat_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/FA_Mono_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/FA_Poly_excel_title" style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Vit_D_IU_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/Vit_K_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/FA_Sat_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/FA_Mono_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/FA_Poly_excel_title" style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
                <TableLayout android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:stretchColumns="*">
                    <TableRow>
                        <TextView android:text="@string/Cholesterol_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/GmWt_1_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/GmWt_2_excel_title" style="@style/textview_style" />
                        <TextView android:text="@string/Refuse_Pct_excel_title" style="@style/textview_style" />
                        <TextView style="@style/textview_style" />
                    </TableRow>
                    <TableRow>
                        <TextView android:id="@id/Cholesterol_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/GmWt_1_excel_title" style="@style/textview_style" />
                        <TextView android:id="@id/GmWt_2_excel_title" android:layout_height="fill_parent" style="@style/textview_style" />
                        <TextView android:id="@id/Refuse_Pct_excel_title" style="@style/textview_style" />
                        <TextView style="@style/textview_style" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>