<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/excel_name" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/NDB_No_excel_title" android:singleLine="true" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/excel_Carbohydrt" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/Carbohydrt_excel_title" android:singleLine="true" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/excel_Energ" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/Energ_excel_title" android:singleLine="true" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/excel_Protein" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/Protein_excel_title" android:singleLine="true" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/excel_Lipid" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/Lipid_excel_title" android:singleLine="true" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/excel_VitC" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/Vit_C_excel_title" android:singleLine="true" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/excel_Fiber" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/Fiber_excel_title" android:singleLine="true" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/excel_Cholesterol" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/Cholesterol_excel_title" android:singleLine="true" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/excel_Calcium" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/Calcium_excel_title" android:singleLine="true" android:layout_weight="1.0" />
</LinearLayout>