<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/customDialog" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textColor="@color/white" android:id="@id/bodyfat_button" android:background="@drawable/select_btn_shap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/scale_type_bobyFat" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <Button android:textColor="@color/white" android:id="@id/bathroom_button" android:background="@drawable/select_btn_shap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/scale_type_bathroom" android:layout_below="@id/bodyfat_button" android:layout_alignParentLeft="true" />
    <Button android:textColor="@color/white" android:id="@id/babyScale_button" android:background="@drawable/select_btn_shap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/scale_type_babyScale" android:layout_below="@id/bathroom_button" android:layout_alignParentLeft="true" />
    <Button android:textColor="@color/white" android:id="@id/kitchenScale_button" android:background="@drawable/select_btn_shap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/scale_type_kitchenScale" android:layout_below="@id/babyScale_button" android:layout_alignParentLeft="true" />
</RelativeLayout>